Notes: Ignore urls when pasting without formatting

When user would paste text, such as
`echo "Server = file:///srv/http" >> /etc/pacman.conf`
this would get partially deleted due to the `file://` part.

When pasting without formatting, just ignore any URLs, to
keep the string as user expects it to be.

BUG: 507952
FIXED-IN: 6.5.0